--- a/.config/doom/README.org
+++ b/.config/doom/README.org
@@ -2,6 +2,27 @@
 #+AUTHOR: Sridhar D Kedlaya
 #+DATE:  [24-04-2023]
 #+PROPERTY: header-args :tangle config.el
+#+auto_tangle: t
+
+* Table of Contents :toc:
+- [[#doom-emacs-config][Doom Emacs Config]]
+- [[#name-and-email-address][Name and Email Address]]
+- [[#window-manager-mutual-exclusion][Window Manager Mutual Exclusion]]
+- [[#to-be-or-not-to-be][To be or not to be]]
+- [[#doom-theme][Doom Theme]]
+- [[#fonts][Fonts]]
+- [[#line-settings][Line Settings]]
+- [[#hookers][Hookers]]
+- [[#transpose-frame][Transpose-Frame]]
+- [[#org-mode][Org Mode]]
+  - [[#org-roam][Org Roam]]
+  - [[#org-babel-tangle][Org-babel-tangle]]
+- [[#elegant-weapons-for-a-more-civilized-age][Elegant Weapons for a more civilized age]]
+- [[#m-x-vscode][M-x vscode]]
+  - [[#typescript-mode][Typescript Mode]]
+  - [[#rustic-mode][Rustic Mode]]
+- [[#company-ultimate-code-completion-backend][Company (Ultimate code completion backend)]]
+- [[#my-elves][My elves]]
 
 * Doom Emacs Config
 It is a story as old as time. A stubborn, shell-dwelling, and melodramatic vimmer—envious of the features of modern text editors—spirals into despair before he succumbs to the dark side. This is his config.
@@ -34,8 +55,8 @@ Setting the theme to doom-monokai-machine.
 * Fonts
 Settings related to fonts within Doom Emacs.
 #+BEGIN_SRC elisp
-(setq doom-font (font-spec :family "Iosevka Nerd Font Mono" :size 15)
-      doom-variable-pitch-font (font-spec :family "Cantarell" :size 15)
+(setq doom-font (font-spec :family "Iosevka Nerd Font Mono" :size 14)
+      doom-variable-pitch-font (font-spec :family "Iosevka Nerd Font Mono" :size 14)
       doom-big-font (font-spec :family "Iosevka Nerd Font Mono" :size 24))
 (after! doom-themes
   (setq doom-themes-enable-bold t
@@ -101,6 +122,15 @@ Window-Management in Emacs? Window-Management in Emacs
        :desc "Org roam node insert"  "i" #'org-roam-node-insert
        :desc "Org roam heading id create"  "h" #'org-id-get-create))
 #+END_SRC
+** Org-babel-tangle
+#+BEGIN_SRC elisp
+(use-package! org-auto-tangle
+  :defer t
+  :hook (org-mode . org-auto-tangle-mode)
+  :config
+  (setq org-auto-tangle-default t))
+#+END_SRC
+
 * Elegant Weapons for a more civilized age
 Repl everywhere.
 #+BEGIN_SRC elisp
