--- a/.config/doom/README.org
+++ b/.config/doom/README.org
@@ -69,23 +69,6 @@ Window-Management in Emacs? Window-Management in Emacs
 #+END_SRC
 * Org Mode
 Org Mode is one of the hallmark features of Emacs.
-** Better Font Faces
-#+BEGIN_SRC elisp
-(defun sk/org-font-setup ()
- (dolist
-      (face
-       '((org-level-1 1.7 "#78dce8" ultra-bold)
-         (org-level-2 1.6 "#ab9df2" extra-bold)
-         (org-level-3 1.5 "#a9dc76" bold)
-         (org-level-4 1.4 "#fc9867" semi-bold)
-         (org-level-5 1.3 "#ff6188" normal)
-         (org-level-6 1.2 "#ffd866" normal)
-         (org-level-7 1.1 "#78dce8" normal)
-         (org-level-8 1.0 "#ab9df2" normal)))
-    (set-face-attribute (nth 0 face) nil :font doom-variable-pitch-font :weight (nth 3 face) :height (nth 1 face) :foreground (nth 2 face)))
-    (set-face-attribute 'org-table nil :font doom-font :weight 'normal :height 1.0 :foreground "#bfafdf"))
-(sk/org-font-setup)
-#+END_SRC
 ** Nicer Heading Bullets
 #+BEGIN_SRC elisp
 (after! org
@@ -111,6 +94,23 @@ Org Mode is one of the hallmark features of Emacs.
              "|"                 ; The pipe necessary to separate "active" states and "inactive" states
              "DONE"           ; Task has been completed
              "CANCELLED" )))) ; Task has been cancelled
+#+END_SRC
+** Better Font Faces
+#+BEGIN_SRC elisp
+(defun sk/org-font-setup ()
+(with-eval-after-load 'org-faces
+   (dolist (face
+            '((org-level-1 1.7 "#78dce8" ultra-bold)
+              (org-level-2 1.6 "#ab9df2" extra-bold)
+              (org-level-3 1.5 "#a9dc76" bold)
+              (org-level-4 1.4 "#fc9867" semi-bold)
+              (org-level-5 1.3 "#ff6188" normal)
+              (org-level-6 1.2 "#ffd866" normal)
+              (org-level-7 1.1 "#78dce8" normal)
+              (org-level-8 1.0 "#ab9df2" normal)))
+    (set-face-attribute (nth 0 face) nil :font doom-variable-pitch-font :weight (nth 3 face) :height (nth 1 face) :foreground (nth 2 face)))
+  (set-face-attribute 'org-table nil :font doom-font :weight 'normal :height 1.0 :foreground "#bfafdf")))
+(sk/org-font-setup)
 #+END_SRC
 ** Org Roam
 #+BEGIN_SRC elisp
