--- a/.config/doom/README.org
+++ b/.config/doom/README.org
@@ -8,6 +8,8 @@
 It is a story as old as time. A stubborn, shell-dwelling, and melodramatic vimmer—envious of the features of modern text editors—spirals into despair before he succumbs to the dark side. This is his config.
 
 *Doom Emacs* is a configuration framework for GNU Emacs and the stubborn martian hacker. This is my personal Doom Emacs configuration
+[[./config.png]]
+[[./Dashboard.png][Dashboard]]
 * Name and Email Address
 This is my name and email address. Used everywhere including git commits made by magit.
 #+BEGIN_SRC elisp
