--- a/.config/doom/README.org
+++ b/.config/doom/README.org
@@ -196,7 +196,7 @@ Repl everywhere.
 ** Typescript Mode
 #+BEGIN_SRC elisp
 (use-package! typescript-mode
-  :mode "\\.ts\\'"
+  :mode "\\.ts|.tsx|.js|.jsx\\'"
   :config
   (setq typescript-indent-level 2)
   (add-hook 'typescript-mode-hook 'lsp)
