Fix broken font

--- a/.config/doom/README.org
+++ b/.config/doom/README.org
@@ -76,9 +76,9 @@ otherwise the colour will be face foreground.")
 * Fonts
 Settings related to fonts within Doom Emacs.
 #+BEGIN_SRC elisp
-(setq doom-font (font-spec :family "Iosevka Nerd Font Mono" :size 14)
-      doom-variable-pitch-font (font-spec :family "TerminessTTF Nerd Font" :size 14)
-      doom-big-font (font-spec :family "Iosevka Nerd Font Mono" :size 24))
+(setq doom-font (font-spec :family "SpaceMono Nerd Font Mono" :size 13)
+      doom-variable-pitch-font (font-spec :family "SpaceMono Nerd Font" :size 13)
+      doom-big-font (font-spec :family "SpaceMono Nerd Font Mono" :size 24))
 (after! doom-themes
   (setq doom-themes-enable-bold t
         doom-themes-enable-italic t))
