--- a/.config/doom/config.org
+++ b/.config/doom/config.org
@@ -876,6 +876,10 @@ Repl everywhere.
   :custom
   (create-lockfiles nil))
 #+END_SRC
+** Tailwind Mode
+#+BEGIN_SRC elisp
+(use-package! lsp-tailwindcss)
+#+END_SRC
 * Company (Ultimate code completion backend)
 #+BEGIN_SRC elisp
 (use-package! company
@@ -893,4 +897,29 @@ They type so I don't have to
     :config
     (setq yas-snippet-dirs '("~/Documents/emacs/snippets"))
     (yas-global-mode t)))
+#+END_SRC
+
+#+BEGIN_SRC elisp
+(use-package! copilot
+  :hook (prog-mode . copilot-mode)
+  :bind (:map copilot-completion-map
+              ("<tab>" . 'copilot-accept-completion)
+              ("TAB" . 'copilot-accept-completion)
+              ("C-TAB" . 'copilot-accept-completion-by-word)
+              ("C-<tab>" . 'copilot-accept-completion-by-word)))
+#+END_SRC
+
+#+BEGIN_SRC elisp
+(after! (evil copilot)
+  ;; Define the custom function that either accepts the completion or does the default behavior
+  (defun my/copilot-tab-or-default ()
+    (interactive)
+    (if (and (bound-and-true-p copilot-mode)
+             ;; Add any other conditions to check for active copilot suggestions if necessary
+             )
+        (copilot-accept-completion)
+      (evil-insert 1))) ; Default action to insert a tab. Adjust as needed.
+
+  ;; Bind the custom function to <tab> in Evil's insert state
+  (evil-define-key 'insert 'global (kbd "<tab>") 'my/copilot-tab-or-default))
 #+END_SRC
